syntax = "proto3";
package MediaPlayerServices;

import "MediaPlayerModels.proto";
import "MiscModels.proto";


service MediaPlayerService{
    rpc Info (MiscModels.EmptyMessage) returns (MediaPlayerModels.PlayingMediaInfo);
}

