syntax = "proto3";
package MiscModels;

message EmptyMessage{
}
